--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     "store"
     "footer";
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 7fr 1fr;
+  grid-template-rows: 1fr 1fr auto 1fr;
 }
 
 .header {
@@ -38,7 +38,7 @@
 
 .main {
   grid-area: store;
-  height: 75vh;
+  height: 72vh;
   padding-bottom: 5px;
   display: flex;
   flex-direction: column;
@@ -48,7 +48,7 @@
 
 .pie {
   grid-area: footer;
-  height: 8vh;
+  height: 10vh;
   background-color: #012f6b;
   display: flex;
   flex-direction: column;
@@ -87,7 +87,8 @@ header p {
   width: 50%;
   padding-left: 10px;
   display: flex;
-  justify-content: start;
+  justify-content: center;
+  align-items: center;
 }
 
 .material-symbols-outlined {
@@ -168,12 +169,14 @@ header p {
 /*...........Cards..........*/
 
 .card {
-  height: 400px;
+  height: 20em;
   width: 20em;
+  margin: 5px;
   border: solid 1px rgba(128, 128, 128, 0.247);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  column-gap: 5px;
 }
 
 .header-c {
@@ -230,27 +233,41 @@ header p {
 }
 /*............Queries.........*/
 
-@media screen and (min-width: 576px) {
+@media (min-width: 576px) {
   .layout {
+    height: 100vh;
     display: grid;
     grid-template-areas:
       "navbar navbar"
       "header store"
       "footer footer";
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 9fr auto;
+    grid-template-rows: 1fr 1fr 1fr;
   }
 
   .header {
-    height: 100%;
-    width: 200px;
+    height: 80vh;
+    width: 15vw;
     display: flex;
     flex-direction: column;
     justify-content: start;
   }
 
+  .header p {
+    margin: 20px 0 15px 0;
+  }
+
+  .search {
+    width: 6em;
+  }
+
+  .main {
+    height: 80vh;
+    width: 85vw;
+  }
+
   .sidebar {
-    height: 100px;
+    height: 10vh;
   }
 
   .menu span {
@@ -261,7 +278,7 @@ header p {
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: space-between !important;
+    justify-content: space-between;
     align-items: center;
   }
   .container_logo {
@@ -280,11 +297,86 @@ header p {
     color: #fff;
   }
   .container {
-    height: 90%;
+    width: 100%;
     overflow-y: scroll;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 20px;
+  }
+
+  .footer {
+    height: 10vh;
+  }
+}
+
+@media (min-width: 992px) {
+  .layout {
+    height: 100vh;
+    display: grid;
+    grid-template-areas:
+      "navbar header"
+      "navbar store"
+      "footer store";
+    grid-template-columns: 1fr 11fr;
+    grid-template-rows: 1fr 10fr 1fr;
+  }
+
+  .header {
+    height: 10vh;
+    width: auto;
+  }
+
+  .search {
+    width: 80%;
+  }
+
+  .sidebar {
+    height: 100%;
+    width: 15vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+  }
+
+  .logo {
+    height: auto;
+    width: 100%;
+    padding-top: 1.3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+  }
+  .container_logo {
+    width: auto;
+    margin-bottom: 1rem;
+  }
+
+  .navegador ul {
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .main {
+    height: 87vh;
+    width: auto;
+    padding: 20px 5px 0 5px;
+  }
+
+  .container {
+    height: 90%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .pie {
+    height: auto;
+    width: 100%;
   }
 }
 
